# meshapi-python-sdk

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  TESTING.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: live-tests.yml  publish.yml
livetests/: .env.livetest.example  batch_file.py  compare.py  config.py  conftest.py  pytest.ini  requirements.txt  responses.py  test_audio.py  test_chat.py  test_compare.py  test_errors.py  test_feature_matrix.py  test_images_edit.py  test_inference_resources.py  test_models.py  test_moderations.py  test_rag.py  test_realtime.py  test_resilience.py  test_responses.py  test_router_select.py  test_stream.py  test_structured_output.py  test_templates.py  test_tool_calling.py  test_video.py  test_web_search.py  tool_call.py
meshapi/: __init__.py  _errors.py  _http.py  _resilience.py  _structured.py  _types.py
meshapi/resources/: audio.py  batches.py  chat.py  compare.py  documents.py  embeddings.py  files.py  images.py  models.py  moderations.py  rag.py  realtime.py  responses.py  router_select.py  videos.py  web_search.py
routersvc/: __init__.py  _errors.py  _http.py  _types.py
routersvc/resources/: chat.py  templates.py
tests/: conftest.py
tests/contract/: test_new_findings.py  test_pass2_findings.py  test_response_shapes.py
tests/fixtures/: chat_completion_chunk.json  chat_completion_chunk_usage.json  chat_completion_response.json  document_list_response.json  document_response.json  embeddings_byok_usage.json  error_401.json  error_422.json  error_429.json  model_list.json  template_list.json  template_summary.json
tests/integration/: test_chat_integration.py  test_models_integration.py  test_templates_integration.py
tests/unit/: test_error_mapping.py  test_request_timeout.py  test_resilience.py  test_sse_parser.py  test_structured_parse.py  test_url_building.py
