[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meshapi-python-sdk"
version = "0.1.0"
description = "Python SDK for the MeshAI model gateway"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["meshapi"]

[tool.hatch.build.targets.sdist]
exclude = [
    "tests/",
    ".github/",
    "*.egg-info",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.version]
path = "meshapi/__init__.py"
pattern = "__version__ = \"(?P<version>[^\"]+)\""
