[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meshapi"
version = "0.1.11"
description = "Official Python SDK for the MeshAPI AI model gateway"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "MeshAPI", email = "contact@meshapi.ai" }]
keywords = [
    "meshapi",
    "llm",
    "openai",
    "anthropic",
    "ai-gateway",
    "openai-compatible",
    "embeddings",
    "batches",
    "prompt-templates",
    "sdk",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.27.0", "pydantic>=2.0.0"]

[project.optional-dependencies]
realtime = ["websockets>=12.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "respx>=0.21.0", "websockets>=12.0"]

[project.urls]
Homepage = "https://meshapi.ai"
Documentation = "https://developers.meshapi.ai"
Repository = "https://github.com/aifiesta/meshapi-python-sdk"
Issues = "https://github.com/aifiesta/meshapi-python-sdk/issues"
Changelog = "https://github.com/aifiesta/meshapi-python-sdk/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["meshapi"]

[tool.hatch.build.targets.sdist]
exclude = ["tests/", ".github/", "*.egg-info"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.version]
path = "meshapi/__init__.py"
pattern = "__version__ = \"(?P<version>[^\"]+)\""
